// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useUrlParams deletes keys that do not have truthy values 1`] = `
<UseUrlParamsTestComponent
  hook={[Function]}
  updateParams={
    Object {
      "pagination": "",
    }
  }
>
  <div>
    {"absoluteDateRangeStart":20,"absoluteDateRangeEnd":20,"autorefreshInterval":60000,"autorefreshIsPaused":false,"dateRangeStart":"now-12","dateRangeEnd":"now","filters":"","search":"","selectedPingStatus":"","statusFilter":"","pagination":"foo"}
  </div>
  <button
    id="setUrlParams"
    onClick={[Function]}
  >
    Set url params
  </button>
  <button
    id="getUrlParams"
    onClick={[Function]}
  >
    Get url params
  </button>
</UseUrlParamsTestComponent>
`;

exports[`useUrlParams gets the expected values using the context 1`] = `
<UseUrlParamsTestComponent
  hook={[Function]}
>
  <div>
    {"absoluteDateRangeStart":20,"absoluteDateRangeEnd":20,"autorefreshInterval":60000,"autorefreshIsPaused":false,"dateRangeStart":"now-19d","dateRangeEnd":"now-1m","filters":"","search":"","selectedPingStatus":"","statusFilter":""}
  </div>
  <button
    id="setUrlParams"
    onClick={[Function]}
  >
    Set url params
  </button>
  <button
    id="getUrlParams"
    onClick={[Function]}
  >
    Get url params
  </button>
</UseUrlParamsTestComponent>
`;
